StarWars-demo-Hubble-Grafana/policies/allow-all.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: endor
  name: allow-all
spec:
  endpointSelector:
    {}
  ingress:
    - fromEntities:
      - all
  egress:
    - toEntities:
      - all
